--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,12 @@ uuid = "1a9e5c8f-db3c-4ac7-8a1f-072b4b3cea6f"
 authors = ["Arthur Fyon"]
 version = "1.0.0-DEV"
 
+[deps]
+SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
+
 [compat]
-julia = "1.8.2"
+julia = "1"
+SymPy = "1.1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
