--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@
 *.jl.cov
 *.jl.mem
 /Manifest.toml
-.github/workflows/
+.github/workflows/CI.yml
+.github/workflows/CompatHelper.yml
+.github/workflows/TagBot.yml
