--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Arthur Fyon"]
 version = "1.0.0-DEV"
 
 [deps]
+Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
 SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
