--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
 SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
 
 [compat]
+Conda = "1"
 SymPy = "1.1"
 julia = "1"
 
