--- a/.github/workflows/Documenter.yml
+++ b/.github/workflows/Documenter.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: osx
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@latest
@@ -17,6 +17,8 @@ jobs:
           version: '1.6'
       - name: Install dependencies
         run: julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
+             python -m pip install --upgrade pip
+             pip install sympy
       - name: Build and deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # If authenticating with GitHub Actions token
